--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
                         <a class="nav-link" href="#services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#features">Contact Us</a>
+                        <a class="nav-link" href="#contact">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">About Us</a>
+                        <a class="nav-link" href="#about">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pricing">Login</a>
+                        <a class="nav-link" href="#login">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pricing">Register</a>
+                        <a class="nav-link" href="#register">Register</a>
                     </li>
                 </ul>
                 <button class="btn btn-primary ms-lg-3">Join Us</button>
