--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <div class="container">
                 <div class="row gy-4">
                     <div class="col-lg-4">
-                        <img class="logo" src="img/logo-white.svg" alt="">
+                        <img class="logo" src="img/logo.jpg" alt="">
                     </div>
                     <div class="col-lg-2">
                         <h5 class="text-white">Brand</h5>
