--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div class="row text-center g-4">
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member card-effect">
-                        <img src="img/team.jpg" alt="">
+                        <img src="img/joy12.jpg" alt="">
                         <h5 class="mb-0 mt-4">Munir hossain</h5>
                         <p>Web Developer</p>
                         <div class="social-icons">
@@ -228,7 +228,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member card-effect">
-                        <img src="img/team.jpg" alt="">
+                        <img src="img/joy12.jpg" alt="">
                         <h5 class="mb-0 mt-4">Mobinul</h5>
                         <p>Web Developer</p>
                         <div class="social-icons">
@@ -240,7 +240,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member card-effect">
-                        <img src="img/team.jpg" alt="">
+                        <img src="img/joy12.jpg" alt="">
                         <h5 class="mb-0 mt-4">Islam</h5>
                         <p>Web Developer</p>
                         <div class="social-icons">
@@ -252,7 +252,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member card-effect">
-                        <img src="img/team.jpg" alt="">
+                        <img src="img/joy12.jpg" alt="">
                         <h5 class="mb-0 mt-4">Shawon</h5>
                         <p>Web Developer</p>
                         <div class="social-icons">
