--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member card-effect">
                         <img src="img/joy12.png" alt="">
-                        <h5 class="mb-0 mt-4">Munir hossain</h5>
+                        <h5 class="mb-0 mt-4">KPESIC</h5>
                         <p>Web Developer</p>
                         <div class="social-icons">
                             <a href="#"><i class='bx bxl-facebook'></i></a>
@@ -229,7 +229,7 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member card-effect">
                         <img src="img/joy12.png" alt="">
-                        <h5 class="mb-0 mt-4">Mobinul</h5>
+                        <h5 class="mb-0 mt-4">KPESIC</h5>
                         <p>Web Developer</p>
                         <div class="social-icons">
                             <a href="#"><i class='bx bxl-facebook'></i></a>
@@ -241,7 +241,7 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member card-effect">
                         <img src="img/joy12.png" alt="">
-                        <h5 class="mb-0 mt-4">Islam</h5>
+                        <h5 class="mb-0 mt-4">KPESIC</h5>
                         <p>Web Developer</p>
                         <div class="social-icons">
                             <a href="#"><i class='bx bxl-facebook'></i></a>
@@ -253,7 +253,7 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member card-effect">
                         <img src="img/joy12.png" alt="">
-                        <h5 class="mb-0 mt-4">Shawon</h5>
+                        <h5 class="mb-0 mt-4">KPESIC</h5>
                         <p>Web Developer</p>
                         <div class="social-icons">
                             <a href="#"><i class='bx bxl-facebook'></i></a>
